--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "mercadopago": "^2.8.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
+    "nodemailer": "^7.0.5",
     "react": "^19",
     "react-big-calendar": "^1.18.0",
     "react-day-picker": "8.10.1",
@@ -76,6 +77,7 @@
   },
   "devDependencies": {
     "@types/node": "^22",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-big-calendar": "^1.16.1",
     "@types/react-dom": "^19",
